[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TransCore_M"
version = "0.9.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["transformers", "accelerate", "tiktoken", "einops", "sentencepiece",
    "scipy", "torch==2.0.1", "torchvision==0.15.2", "torchaudio==2.0.2", "pillow", "tensorboard", "matplotlib",
    "deepspeed", "gradio", "peft"
]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
